samples/_failures_safe/1761712053_5cd52d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b195dea3.c: In function ‘main’:
./samples/SAFE/__tmp_b195dea3.c:156:5: error: expected expression at end of input
  156 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b195dea3.c:156:5: error: expected declaration or statement at end of input
